--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ find_package(std_msgs REQUIRED)
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/PWPTraj.msg"
   "msg/CoeffPoly3.msg"
+  "msg/DynTraj.msg"
   DEPENDENCIES std_msgs
 )
 
